CAMEL-10141: make camel-blueprint tests pass on Java 9. This required the use of Java's native shemagen instead of jaxb-xjc's embedded schemagen which doesn't work on Java 9